Mobile: Fix busypopup label alignment
Tested using:
`map.fire('blockUI', {message: 'Saving document, please wait...'});`

--- a/browser/css/device-mobile.css
+++ b/browser/css/device-mobile.css
@@ -716,8 +716,8 @@ td[id^='tb_spreadsheet-toolbar_item']:focus table.w2ui-button div.w2ui-icon, td[
 #mobile-wizard.popup #busylabel {
 	border-bottom: none !important;
 	font-size: 100% !important;
-	margin: 20px !important;
-	width: 100%;
+	/* inherits margin top and bototm from jsdialogs.css */
+	margin-inline: 2px !important;
 }
 
 /* snackbar */
